--- a/appsettings.format.json
+++ b/appsettings.format.json
@@ -1,18 +1,16 @@
 {
-  "Db": {
-    "ConnectionString": "Server=127.0.0.1;Database=account-data;Port=55432;User Id=user;Password=password;"
+  "AccountDataService": {
+    "BalancesServiceAddress": "${MatchingEngineBalancesServiceAddress}"
   },
-  "RabbitMq": {
-    "HostUrl": "rabbit.exchange.svc.cluster.local",
-    "Username": "user",
-    "Password": "password"
+  "Jwt": {
+    "Secret": "${JwtTokenSecret}"
   },
   "Serilog": {
     "minimumLevel": {
       "default": "Debug",
       "override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
+        "Microsoft": "Debug",
+        "System": "Debug"
       }
     }
   }
