--- a/src/AccountData.Common/AccountData.Common.csproj
+++ b/src/AccountData.Common/AccountData.Common.csproj
@@ -6,14 +6,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ServiceFunctions\**" />
+    <EmbeddedResource Remove="ServiceFunctions\**" />
+    <None Remove="ServiceFunctions\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="5.1.2" />
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="MassTransit" Version="6.2.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0-preview.1.20120.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ServiceFunctions\" />
+    <PackageReference Include="Swisschain.MatchingEngine.Client" Version="0.0.9" />
   </ItemGroup>
 
 </Project>
