--- a/src/AccountData.Worker/AccountData.Worker.csproj
+++ b/src/AccountData.Worker/AccountData.Worker.csproj
@@ -16,12 +16,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AccountData.Common\AccountData.Common.csproj" />
-    <ProjectReference Include="..\AccountData.MessagingContract\AccountData.MessagingContract.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="Dockerfile">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="MessageConsumers\" />
   </ItemGroup>
 </Project>
