Fix controller routes and mappings

--- a/appsettings.format.json
+++ b/appsettings.format.json
@@ -1,6 +1,9 @@
 {
   "AccountDataService": {
-    "BalancesServiceAddress": "${MatchingEngineBalancesServiceAddress}"
+    "BalancesServiceAddress": "${MatchingEngineBalancesServiceAddress}",
+    "Db": {
+      "ConnectionString": "${ExchangeAccountDataPostgresConnectionString}"
+    } 
   },
   "Jwt": {
     "Secret": "${JwtTokenSecret}"
